ui/app/assets/plugins/monitor/solutions/appdynamics.less
@import 'colors';
@import '../../../commons/_base';

#wrapper  .monitor .appdynamics {
  form p {
    padding: 3px 0;
    margin: 0;
    .clear-after();
  }
  label {
    display: block;
    clear: both;
    float: left;
    text-align: right;
    width: 150px;
    padding: 3px 5px 0 0;
  }
  p.err {
    color: @red;
  }
}

